window.find() case-insensitive search doesn't match diacritical marks https://bugs.webkit.org/show_bug.cgi?id=117353 <rdar://problem/8535227>

Patch by Daniel Bates <dabates@apple.com> on 2013-06-12
Reviewed by Darin Adler.

Source/WebCore:

Currently, a case-insensitive window.find() search will return true for a word w
(e.g. café) with diacritical characters when w appears on the page without
diacritical marks (e.g. cafe). This leads to bad results, especially when
searching for a non-English word (e.g. qué) where the presence of an accented
character(s) may change the meaning of the word. Instead window.find() should
return false when case-insensitively matching a word with diacritical marks to
the same word without diacritical marks.

Test: fast/text/find-diacritical-mark.html

* editing/TextIterator.cpp:
(WebCore::SearchBuffer::SearchBuffer):

LayoutTests:

Added test to use window.find() to find a search string in text, where either
the search string or text (or both) contain diacritical characters.

Additionally, updated tests LayoutTests/fast/text/find-soft-hyphen.html
and LayoutTests/editing/execCommand/findString-diacriticals.html based on the
new behavior of window.find(). Moved function testFind() from LayoutTests/fast/text/script-tests/find-backwards.js
to its own file, LayoutTests/fast/text/resources/test-find.js, so that this function can
be used by both tests LayoutTests/fast/text/find-{backwards, diacritical-mark}.html.

* LayoutTests/editing/execCommand/findString-diacriticals.html: Update test based on the new
behavior of window.find().
* fast/text/find-backwards.html: Include external JavaScript file test-find.js.
* fast/text/find-case-folding-expected.txt: Rebase result; expected failure.
* fast/text/find-case-folding.html: Add comment to see bug #117548 with regards to expected failure.
* fast/text/find-diacritical-mark-expected.txt: Added.
* fast/text/find-diacritical-mark.html: Copied from LayoutTests/fast/text/find-backwards.html.
* fast/text/find-soft-hyphen-expected.txt: Rebase result.
* fast/text/resources/test-find.js: Added.
(testFind):
* fast/text/script-tests/find-backwards.js: Moved function testFind() from here to
file fast/text/resources/test-find.js and modified it to take an additional argument to
toggle search case sensitivity.
* fast/text/script-tests/find-diacritical-mark.js: Added.
* fast/text/script-tests/find-soft-hyphen.js: Update test based on the new behavior of window.find().

Canonical link: https://commits.webkit.org/135711@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151505 268f45cc-cd09-0410-ab3c-d52691b4dbfc